# Magnetic-Lens-Particle-Motion

./: .gitignore  README.md  gyro_radius.py
py/: MonteCarloExample.py  SingleIonExample.py  build_simulation.py  example.py  final_positions.py  gyro_radius.py  plot_py.py  starting_positions.py
src/: CMakeLists.txt  config.h  file_input.cpp  grid.cpp  main.cpp  methods.cpp  myVectorMath.cpp  node.cpp  particle.cpp  pybind.cpp  randomPosition.cpp  simulation.cpp
src/include/: config.h  file_input.h  grid.h  methods.h  myVectorMath.h  node.h  particle.h  pybind.h  randomPosition.h  simulation.h
